# TelementryLoggingSystem

./: .gitignore  README.md
phase_1/: CMakeLists.txt
phase_1/include/: logmanager.hpp
phase_1/src/: consolesink.cpp  filesink.cpp  main.cpp
phase_1/test/: logmanagertest.cpp
phase_2/: CMakeLists.txt  README.md  testsocket.out
phase_2/include/: FileTelemetrySourceImpl.hpp  Ilogsink.hpp  SocketTelemetrySourceImpl.hpp  safesocket.hpp
phase_2/src/: FileTelemetrySourceImpl.cpp  SocketTelemetrySourceImpl.cpp  logmanager.cpp  logmessage.cpp  main.cpp
phase_2/test/: logmanagertest.cpp  logmessagetest.cpp
phase_3/: CMakeLists.txt
phase_3/include/: filesink.hpp  formatter.hpp  logmessage.hpp  policies.hpp  ringbuffer.hpp
phase_3/src/: SocketTelemetrySourceImpl.cpp  logmanager.cpp  main.cpp  safesocket.cpp
phase_4/: CMakeLists.txt  README.md
phase_4/include/: FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  logmanager.hpp  logtype.hpp
phase_4/src/: FileTelemetrySourceImpl.cpp  logmanager.cpp  main.cpp
phase_5/: CMakeLists.txt  README.md  commonapi.ini  run_server_home.sh  vsomeip_config.json
phase_5/build_server/: CMakeCache.txt  Makefile  cmake_install.cmake  server
phase_5/include/: CommonAPITelemetrySourceImpl.hpp
phase_5/src/: CommonAPITelemetrySourceImpl.cpp  main.cpp  safefile.cpp  server.cpp  threadpool.cpp
phase_5/src-gen/v1/logger/methods/: logging.hpp  loggingSomeIPCatalog.json  loggingSomeIPDeployment.hpp  loggingSomeIPProxy.cpp  loggingSomeIPStubAdapter.cpp  loggingSomeIPStubAdapter.hpp
phase_6/: vsomeip_config.json
phase_6/common-api/: x.fdepl  x.fidl
phase_6/gui/: CMakeLists.txt  SystemMonitorBackend.cpp  SystemMonitorBackend.h  main.cpp
phase_6/gui/qml/: main.qml
phase_6/include/: SocketTelemetrySourceImpl.hpp  formatter.hpp
phase_6/src/: logmessage.cpp  safesocket.cpp
phase_6/src-gen/v1/logger/methods/: loggingProxy.hpp  loggingProxyBase.hpp  loggingSomeIPDeployment.cpp  loggingSomeIPProxy.hpp  loggingStub.hpp  loggingStubDefault.hpp
phase_7/: CMakeLists.txt  README.md  vsomeip_config.json
phase_7/ServerApp/: server.cpp  telemetry_sampler.cpp  telemetry_sampler.hpp
phase_7/common-api/src-gen/v1/v1/logger/methods/: TelemetryTypes.hpp  logging.hpp  loggingProxy.hpp  loggingSomeIPStubAdapter.cpp  loggingSomeIPStubAdapter.hpp  loggingStub.hpp
phase_7/gui/: LogParser.h  main.cpp
phase_7/include/: CommonAPITelemetrySourceImpl.hpp  consolesink.hpp  filesink.hpp  ringbuffer.hpp  safefile.hpp
phase_7/src/: CommonAPITelemetrySourceImpl.cpp  filesink.cpp
phase_8/: README.md  config_gui.html  launch.sh
phase_8/common-api/: x.fdepl  x.fidl
phase_8/common-api/src-gen/v1/v1/logger/methods/: TelemetryTypesSomeIPDeployment.cpp  TelemetryTypesSomeIPDeployment.hpp  loggingProxyBase.hpp  loggingSomeIPCatalog.json  loggingSomeIPDeployment.cpp  loggingSomeIPDeployment.hpp  loggingSomeIPProxy.cpp  loggingSomeIPProxy.hpp  loggingStubDefault.hpp
phase_8/gui/: CMakeLists.txt  LogParser.cpp  LogParser.h  effects.js  main.cpp  main.qml  qml.qrc
phase_8/include/: CommonAPITelemetrySourceImpl.hpp  FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  SocketTelemetrySourceImpl.hpp  YouTalkingToMe.hpp  YourApplicationName.hpp  config.hpp  logtype.hpp  policies.hpp  safesocket.hpp  threadpool.hpp
phase_8/src/: CommonAPITelemetrySourceImpl.cpp  SocketTelemetrySourceImpl.cpp  YouTalkingToMe.cpp  YourApplicationName.cpp  config.cpp  main.cpp  safesocket.cpp
